Add universal ignore rule for Jupyter checkpoints

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Jupyter
 .ipynb_checkpoints/
 
+# In .gitignore
+**/.ipynb_checkpoints/
+
 # Environment and Auto-generated files
 anaconda_projects/db/
 .virtual_documents/
